# Sleep-stage-classification

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yaml
.github/workflows/: docs.yaml
charts/argo-cwl-runner/: Chart.yaml  values.yaml
charts/argo-cwl-runner/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/argo-cwl-runner/templates/tests/: test-connection.yaml
charts/argo-event-driven/: Chart.yaml  values.yaml
charts/argo-event-driven/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/argo-event-driven/templates/tests/: test-connection.yaml
charts/argo-workflow-inference/: Chart.yaml  values.yaml
charts/argo-workflow-inference/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/argo-workflow-inference/templates/tests/: test-connection.yaml
charts/argo-workflow-train/: Chart.yaml  values.yaml
charts/argo-workflow-train/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/argo-workflow-train/templates/tests/: test-connection.yaml
charts/minio/: values.yaml
charts/minio/templates/: deployment.yaml
containers/inference-ssc/: README.md  pyproject.toml
docs/: components.md  index.md  sequence.md
docs/diagrams/src/: components.puml
docs/diagrams/src/class/: sequence.puml
notebooks/: 60_sleep.ipynb  environment.yaml
train-ssc/: README.md  pyproject.toml
