[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "train-ssc"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "pmembari", email = "parham.membari@terradue.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/pmembari/train-ssc#readme"
Issues = "https://github.com/pmembari/train-ssc/issues"
Source = "https://github.com/pmembari/train-ssc"

[tool.hatch.version]
path = "src/train_ssc/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/train_ssc tests}"

[tool.coverage.run]
source_pkgs = ["train_ssc", "tests"]
branch = true
parallel = true
omit = [
  "src/train_ssc/__about__.py",
]

[tool.coverage.paths]
train_ssc = ["src/train_ssc", "*/train-ssc/src/train_ssc"]
tests = ["tests", "*/train-ssc/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
